# leaflang

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.command  build.sh  lfmake.lf
_build/: README.md
_build/examples/: boolean_ops.lf  boolean_ops.pico  cast.lf  cast.pico  dict.lf  forward_call.lf  forward_call.pico  global_after_local.pico  hashes.lf  hashes.pico  hello_call.lf  hello_call.pico  hello_return.lf  hello_return.pico  hello_var.lf  hello_var.pico  list.lf  multiple_statements.pico  string.lf  tables.pico
_build/geany/: filetypes.Leaf.conf
_build/libs/core/: core.c  core.h  core.lb
_build/modules/core/: module.js  module.txt
compiler/: pico.cpp
interpreter/: core.c  core.cpp  core.h  corelib.h  corelib.txt  gencorelib.cc  leaf.cpp  pico.cpp
src/: common.h  definitions.cpp  definitions.h  generator.cpp  generator.h  leaf.cpp  lib.cpp  lib.h  parser.cpp  parser.h  token.cpp  token.h  types.h
